<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:id="@+id/recipe_selected_wgt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingEnd="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingStart="4dp"
            android:text="@string/selected_recipe"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipe_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingEnd="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingStart="4dp"
            android:text="@string/all_ingredients"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingredients_text_wgt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:lineSpacingExtra="4dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/ingredients"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/start_cooking_btn_wgt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/GOT_IT"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            android:textStyle="bold" />

</LinearLayout>