<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="4dp"
    android:background="@drawable/border"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/recipe_video_thumbnail"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="0.3"
            android:contentDescription="@string/video_Thumbnail"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/step_short_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="100dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:text="@string/Short_Description"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/step_long_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:text="@string/Long_description"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>
</android.support.v7.widget.CardView>